<resources>

    <string name="app_name">FlowerTale</string>

    <string name="camera">拍照</string>
    <string name="photos">相册</string>
    <string name="history">历史</string>
    <string name="recognition_result">识别结果</string>
    <string name="plant_name_chinese">中文植物名</string>
    <string name="plant_name_latin">Latin Name</string>
    <string name="family_info">所属科名</string>
    <string name="genus_info">所属种名</string>
    <string name="credibility">可信度</string>
    <string name="alias_name">别名</string>
    <string name="new_raising">开启新一次的养护之旅</string>
    <string name="choose_flower_type">花芳以养性，选择属于你的那一种</string>
    <string name="write_flower_name">花亦有名，为你的此次养护起个名字吧</string>
    <string name="invite_flower_friends">共赏彩灼烂漫，邀请朋友一起养护</string>
    <string name="publish">发布</string>
    <string name="water">浇水</string>
    <string name="fertilize">施肥</string>
    <string name="prune">剪枝</string>
    <string name="sunshine">光照</string>
    <string name="say_something">说点什么吧...</string>
    <string name="take_photo">拍照上传图片</string>
    <string name="select_from_album">从相册选取</string>
    <string name="group_create_title">创建群组</string>
    <string name="group_switch">切换群组</string>
    <string name="group_create_finish">完成</string>
    <string name="group_name">群组名称</string>
    <string name="member">成员</string>
    <string name="group_require">*您最多可以邀请包括您在内10名成员进入群组</string>
    <string name="group_intro">*欢迎您邀请其他人加入群组，在群组内</string>
    <string name="group_intro1"> -您可以与他人一起养护各种植物</string>
    <string name="group_intro2"> -制定您所希望的养护方案</string>
    <string name="group_intro3"> -与他人共享植物的最新动态</string>
    <string name="member_add">新增</string>
    <string name="member_invite_title">邀请</string>
    <string name="member_search_hint">搜索想邀请的人</string>
    <string name="group_members">群组成员</string>
    <string name="raising_plan_title">养护计划名称</string>
    <string name="raising_scheme_title">养护方案</string>
    <string name="quit_raising_group">退出养护计划</string>
    <string name="switch_scheme">切换至该方案</string>
    <string name="scheme_add">添加方案</string>
    <string name="scheme_name">方案名称</string>
    <string name="add_time">添加时间</string>
    <string name="already_full">数量已满</string>
    <string name="publish_record">发布动态</string>
    <string name="view_accomplishment">完成情况</string>
    <string name="today_progress">今日进度</string>
    <string name="introduction">介绍</string>
    <string name="value">价值</string>
    <string name="distribution">分布</string>
    <string name="characteristic">特征</string>
    <string name="flowering_period">花期</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="goBack">返回</string>
</resources>
