<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textColor="@color/PrimaryBlue"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:src="@drawable/login_logo" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/PrimaryBlue"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/PrimaryBlue"
        android:hint="@string/username"
        android:inputType="text"
        android:textCursorDrawable="@color/PrimaryBlue" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/PrimaryBlue"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textCursorDrawable="@color/PrimaryBlue" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_btn"
        android:text="@string/login"
        android:textColor="@color/PrimaryBlue"
        android:textSize="18sp" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_btn"
        android:text="@string/register"
        android:textColor="@color/PrimaryBlue"
        android:textSize="18sp" />

</LinearLayout>
