<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/today_progress"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/water"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </LinearLayout>

        <TextView
            android:id="@+id/water_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="40%"
            android:textSize="15sp"
            android:layout_marginRight="10dp"
            android:layout_gravity="right|center_vertical"/>

        <info.abdolahi.CircularMusicProgressBar
            android:id="@+id/water_progress"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:src="@drawable/water"
            app:border_color="#80CBC4"
            app:border_width="3dp"
            app:centercircle_diammterer="1"
            app:progress_color="#00796B"
            app:progress_startAngle="270"
            app:draw_anticlockwise="false"
            app:enable_touch="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/fertilize"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </LinearLayout>

        <TextView
            android:id="@+id/fertilize_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="40%"
            android:textSize="15sp"
            android:layout_marginRight="10dp"
            android:layout_gravity="right|center_vertical"/>

        <info.abdolahi.CircularMusicProgressBar
            android:id="@+id/fertilize_progress"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:src="@drawable/fertilize"
            app:border_color="#80CBC4"
            app:border_width="3dp"
            app:centercircle_diammterer="1"
            app:progress_color="#00796B"
            app:progress_startAngle="270"
            app:draw_anticlockwise="false"
            app:enable_touch="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/prune"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </LinearLayout>

        <TextView
            android:id="@+id/prune_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="40%"
            android:textSize="15sp"
            android:layout_marginRight="10dp"
            android:layout_gravity="right|center_vertical"/>

        <info.abdolahi.CircularMusicProgressBar
            android:id="@+id/prune_progress"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:src="@drawable/prune"
            app:border_color="#80CBC4"
            app:border_width="3dp"
            app:centercircle_diammterer="1"
            app:progress_color="#00796B"
            app:progress_startAngle="270"
            app:draw_anticlockwise="false"
            app:enable_touch="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/sunshine"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </LinearLayout>

        <TextView
            android:id="@+id/sunshine_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="40%"
            android:textSize="15sp"
            android:layout_marginRight="10dp"
            android:layout_gravity="right|center_vertical"/>

        <info.abdolahi.CircularMusicProgressBar
            android:id="@+id/sunshine_progress"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:src="@drawable/sunshine"
            app:border_color="#80CBC4"
            app:border_width="3dp"
            app:centercircle_diammterer="1"
            app:progress_color="#00796B"
            app:progress_startAngle="270"
            app:draw_anticlockwise="false"
            app:enable_touch="false"/>

    </LinearLayout>


</LinearLayout>